# retail-sentiment-alpha

./: .gitignore  AGENTS.md  MIGRATION.md  docker-compose.yml  pyproject.toml  run_pipeline.py
crawlers/: config.py  eastmoney.py  taoguba.py  taoguba_bbs.py
data/: market_data.py
features/: factors.py
models/: __init__.py  backtest.py  lstm.py  regression.py
nlp/: sentiment.py
report/: pre.tex  report.tex  visualizations.py
sql/: schema.sql
web/: app.py
web/templates/: dashboard.html
