[project]
name = "retail-sentiment-alpha"
version = "0.1.0"
description = "散户情绪另类因子 Alpha 策略 — 数据科学导论期末大作业"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "tqdm>=4.65",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "plotly>=5.14",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "akshare>=1.14",
    "transformers>=4.36",
    "torch>=2.1",
    "jieba>=0.42",
    "snownlp>=0.12",
    "python-dotenv>=1.0",
    "baostock>=0.9.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.33",
    "jinja2>=3.1",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.18",
    "ruff>=0.3",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
